tracktivityPetsWebsite/static/tracktivityPetsWebsite/style/style.css
/* ... */
#progressbar {
    margin-top: 30%;
}
/**************************************************************************************************************************************************************/

#pet_phrase
{
	margin-bottom: 2px;
}

#infoRow>div
{
	padding: 10px;
}

.infoItem
{
	background:url('/static/tracktivityPetsWebsite/images/clouds.jpg');
	height: 100%;
	border-radius: 8px;
	padding-top: 0.5px;
	border: 1px solid black;
}

.infoItem h3, #pet_selector_title
{
	border-radius: 8px 8px 0px 0px;
	color: white;
	background: #00002B;
	margin: 3px;
}

#feedbackComment {
    border: 1px solid black;
}

.carousel-content {
    color:black;
    display:flex;
    align-items:center;
    margin: 20px;
}
		
.carousel-control.left, .carousel-control.right {
    background-image: none
}

.carousel-control{
  color: #000;
}			

#fitbitlinkmessage
{
	padding-right: 40px;	
	padding-left: 40px;	
}

.centre
{
	float:none;
	margin-right: auto;
	margin-left: auto;
}

#fitbitlinkmessage h3
{
	margin-bottom: 30px;
}

#petSelectionContainer, #pet_content
{
	padding-left: 0px;
	padding-right: 0px;
	
	background: linear-gradient( rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) ), url("/static/tracktivityPetsWebsite/images/pet_selection_background.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 60%;
}

#petSelectionContainer
{
	width: 100%;
}

#pet_content
{
	color: white;
}

.bottomBox {
	border-radius: 25px;
  	background-color: #ffffff;
    border: 1px solid black;
	margin: 30px;
    padding: 4px; 
    height: 530px;
}

.bubble 
{
    position: relative;
    /*height: 120px;*/
    padding: 0px;
    background: #FFFFFF;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    border: #000000 solid 3px;
}

.bubble:after 
{
    content: '';
    position: absolute;
    border-style: solid;
    border-width: 15px 15px 0;
    border-color: #FFFFFF transparent;
    display: block;
    width: 0;
    z-index: 1;
    margin-left: -15px;
    bottom: -15px;
    left: 50%;
}

.bubble:before 
{
    content: '';
    position: absolute;
    border-style: solid;
    border-width: 17px 17px 0;
    border-color: #000000 transparent;
    display: block;
    width: 0;
    z-index: 0;
    margin-left: -17px;
    bottom: -20px;
    left: 50%;
}
 
.bottom {
	left: 10%;
    border-color: #c8c8c8 transparent transparent transparent;
    border-width: 8px 8px 0px 8px;
    bottom: -8px;
}

.bottom:after {
	left: 10%;
    border-color: #f8f8f8 transparent transparent transparent;
    border-style: solid;
    border-width: 7px 7px 0px 7px;
    bottom: 1px;
    content: "";
    position: absolute;
    left: -7px;
}

#petselectionCarouselArrows
{
	position: absolute;
	  top: 50%;
	  transform: translateY(-50%);
}

#petselectionCarouselArrows > .row > img
{
	opacity: 0.7;
}

#petselectionCarouselArrows .row
{
	margin-left: 0px;
	margin-right: 0px;
}

#visible_pets 
{
	margin-left: 0px;
	margin-right: 0px;
	position: relative;
}

.bubbletext_header {
    margin-bottom: 30px;
}

.dashboard_bubbletext {
    margin-top: 10px;
    margin-bottom: 10px;
}

#petSpeech {
    padding: 10px;
    font-size: 24px;
    text-align: center;
}

#pet_scene_filler {
    margin-top: 150px;
}

#petInfoProgress {
    background-color: #666;
    border-radius: 8px;
    border: 1px solid black;
}

#infoTable {
    font-size: 24px;
    color: white;
    margin-top: 10px;
    margin-bottom: 15px;
}

#infoTable td {
    padding-left: 20px;
}

#pet_content p
{
	background: #eee;
	padding: 3px;
	color: black;
}

#adoptPetForm
{
	padding: 10px;
	margin-top:10px;
	margin-bottom:10px;
	border-radius: 8px;
	background: #eee;
	border: 1px solid black;
}

/*********************************************************************** Inventory, Store and Challenges Pages Style ******************************************************/

.nav-tabs {border-bottom: 0px;}
    
.nav-tabs > li > a {
    /* Override default Bootstrap tab style */
    background: #DADADA;
}

.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li > a:hover, {
    background: white;
    border: 1px solid white;
}

.tabs, #inventory_pet p, #inventory_detail_header, .collection_view_desktop, .collection_view_desktop p, .modal
{
    text-align: center;
}

.tabs, {
    margin-bottom: 1%;
}

.collection_window {
    padding-top: 15px;
    //background: white;  
    background: url("/static/tracktivityPetsWebsite/images/blurclouds.jpg") no-repeat center fixed;
    background-size: cover;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
}

.inventory_button, .store_button {
    border: none;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 10px;
    margin-bottom: 10px;
}

.inventory_detail, {
    border-right: 1px solid black;
    border-top: 1px solid black;
    border-bottom: 1px solid black;;
    background: white;
    padding-bottom: 1%;    
}

#inventory_detail_scenery_description_div, #inventory_detail_cosmetics_description_div {
    height: 250px;
    overflow: auto;
}

#store_detail_scenery_description_div {
    height: 210px;
    overflow: auto;     
}

#inventory_detail_pet_description_div, #store_detail_pet_description_div {
    height: 180px;
    overflow: auto;
}

#inventory_detail_scenery_image, #store_detail_scenery_image {
    border: 2px solid black;
    border-radius: 4px;
    padding: 4px;
    height: 220px;
}

p#inventory_detail_pet_description, #inventory_detail_scenery_description, #inventory_detail_cosmetics_description, #challenge_detail_description, #store_detail_pet_description, #store_detail_scenery_description {
    text-align: justify;
}

#inventory_detail_scenery_image, #inventory_detail_scenery_description_div, #store_detail_scenery_description_div, #store_detail_scenery_image, .activate_scenery_button {
    margin-top: 3%;
}

#store_detail_pet_description_div {
    margin-bottom: 15px;
}
/* ... */

